--- a/style5.css
+++ b/style5.css
@@ -110,4 +110,16 @@ ul{
 	opacity: 1;
 	text-decoration: none;
 }
+.parent {
+    width: 100%;
+    height: 100%;
+    
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    overflow: auto;   
+}
+
 
